# windjammer

./: .dockerignore  .gitignore  300_TESTS_MILESTONE.md  3D_ENGINE_TDD_PLAN.md  AGENTS.md  ALL_PHASES_COMPLETE.md  ANALYZER_FIX_INDEXED_MUTATIONS.md  ARCHITECTURAL_FIX_METHOD_RESOLUTION.md  BENCHMARKS.md  BRANCH_STATUS.md  BRANCH_SUMMARY.md  BUG2_TEST_TARGET_DETECTION.md  BUG4_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  COMPILER_BUGS_TO_FIX.md  COMPILER_BUG_FIXED.md  COMPILER_BUG_VEC_INDEX_LOCAL_VAR.md  COMPILER_FIX_COMPARISON_CAST.md  COMPILER_TDD_SESSION_2026_03_21.md  COMPLETE_GAME_SESSION_SUMMARY.md  COMPOUND_ASSIGNMENT_COMPLETE_2026_03_12.md  COMPREHENSIVE_STATUS.md  CONSISTENCY_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FINDINGS_v0_34_0.md  CURRENT_STATUS_v0_34_0.md  Cargo.toml  DISK_CLEANUP_SUCCESS.md  DISK_SPACE_ANALYSIS.md  DOGFOODING_AND_AUTO_DERIVE_COMPLETE.md  DOGFOODING_EXAMPLES_CONVERTED.md  DOGFOODING_EXTENDED_SESSION_COMPLETE.md  DOGFOODING_MEGA_SESSION_COMPLETE.md  DOGFOODING_SESSION_2.md  DOGFOODING_SESSION_3_SUMMARY.md  DOGFOODING_SESSION_FEB22_2026.md  DOGFOODING_SESSION_FINAL.md  DOGFOODING_SESSION_STATUS.md  (+190 more)
build_editor_demo/: Cargo.toml  editor_demo.rs  editor_demo.rs.map
crates/windjammer-c-ffi/: BUILD.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/windjammer-c-ffi/include/: windjammer.h
crates/windjammer-c-ffi/src/: ai.rs  animation.rs  audio.rs  components.rs  input.rs  lib.rs  networking.rs  physics.rs  rendering.rs  ui.rs  world.rs
crates/windjammer-editor-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/windjammer-editor-desktop/src/: main.rs
crates/windjammer-editor-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/windjammer-editor-desktop/ui/: app.js  index.html  styles.css
crates/windjammer-editor-web/: Cargo.toml  README.md  WASM_BUILD.md  build.sh  editor-state.js  editor-ui.js  index.html  serve.sh  storage-api.js  styles.css  wasm-loader.js  webgl-renderer.js
crates/windjammer-editor-web/src/: compiler_bridge.rs  editor.rs  engine_bridge.rs  error_display.rs  file_browser.rs  lib.rs  project.rs  storage.rs
crates/windjammer-game-editor/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/windjammer-game-editor/capabilities/: default.json
crates/windjammer-game-editor/icons/: icon.icns
crates/windjammer-game-editor/src/: editor_integration.rs  lib.rs  main.rs
crates/windjammer-game-editor/tests/: integration_test.rs
crates/windjammer-game-editor/ui/: app-new.js  app-old.js  app.js  dialog.html  editor.wj  editor_demo.wj  editor_desktop.wj  editor_desktop_simple.wj  editor_docking.wj  editor_minimal.wj  editor_professional.wj  editor_reactive.wj  editor_simple.wj  editor_v2.wj  editor_v3.wj  index-new.html  index-old.html  index.html  styles-new.css  styles-old.css  styles.css
crates/windjammer-game-framework/: Cargo.toml  README.md
crates/windjammer-game-framework/benches/: ecs_benchmarks.rs
crates/windjammer-game-framework/docs/: WASM_CANVAS.md
crates/windjammer-game-framework/examples/: audio_playback_test.rs  audio_test.rs  cube_3d.wj  game_loop_test.rs  physics_test.rs  platformer_simple.md  pong.rs  pong_simple.rs  pong_working.rs  puzzle_game.wj  rendering_test.rs  shooter_2d.wj  shooter_game.wj  sprite_test.rs  texture_test.rs  window_test.rs
crates/windjammer-game-framework/src/: ai_behavior_tree.rs  ai_behavior_tree_simple.rs  ai_state_machine.rs  ai_steering.rs  animation.rs  animation_blending.rs  animation_controller.rs  animation_gpu.rs  animation_ik.rs  animation_state_machine.rs  asset_hot_reload.rs  assets.rs  audio.rs  audio_advanced.rs  audio_streaming.rs  batching.rs  batching_codegen.rs  camera2d.rs  camera3d.rs  character_controller.rs  compiler_analysis.rs  culling.rs  ecs.rs  ecs_optimized.rs  ecs_windjammer.rs  game_app.rs  game_loop.rs  gamepad.rs  gltf_loader.rs  input.rs  lib.rs  lod.rs  lod_system.rs  math.rs  memory_pool.rs  mesh_clustering.rs  navmesh.rs  networking.rs  networking_replication.rs  networking_rpc.rs  (+33 more)
crates/windjammer-game-framework/tests/: animation_state_machine_tests.rs  audio_advanced_tests.rs  camera3d_tests.rs  character_controller_tests.rs  ecs_tests.rs  game_2d_tests.rs  gamepad_tests.rs  gltf_loader_tests.rs  input_tests.rs  integration_game_examples.rs  integration_tests.rs  math_tests.rs  physics3d_tests.rs  plugin_tests.rs  weapon_system_tests.rs
crates/windjammer-lsp/: Cargo.toml  README.md  fix_ast_compat.sh
crates/windjammer-lsp/benches/: salsa_performance.rs
crates/windjammer-lsp/src/: analysis.rs  cache.rs  code_lens.rs  completion.rs  completion.rs.bak  database.rs  database.rs.bak  debug_adapter.rs  debug_adapter.rs.bak  diagnostics.rs  handlers.rs  hover.rs  ide_queries.rs  inlay_hints.rs  lib.rs  main.rs  refactoring.rs  semantic_tokens.rs  server.rs  server.rs.bak  symbol_table.rs
crates/windjammer-lsp/tests/: cross_file_tests.rs  ide_analysis_test.rs  integration_tests.rs  integration_tests.rs.bak  refactoring_integration.rs  refactoring_integration.rs.bak  salsa_tests.rs  stress_tests.rs
crates/windjammer-mcp/: Cargo.toml  DESIGN.md  OAuth.md  README.md  build.rs  fix_ast.sh
crates/windjammer-mcp/benches/: mcp_tools_benchmarks.rs
crates/windjammer-mcp/src/: agent_index.rs  error.rs  http_server.rs  lib.rs  main.rs  oauth.rs  protocol.rs  server.rs
crates/windjammer-mcp/tests/: manifest_test.rs
crates/windjammer-mcp/tools/: manifest.json
crates/windjammer-runtime/: Cargo.toml  Cargo.toml.tmp  README.md
crates/windjammer-runtime/src/: async_runtime.rs  bench.rs  cli.rs  collections.rs  contracts.rs  crypto.rs  csv_mod.rs  db.rs  doc_test.rs  encoding.rs  env.rs  ffi.rs  fixtures.rs  fs.rs  game.rs  http.rs  io.rs  json.rs  jwt.rs  lib.rs  log_mod.rs  marker.rs  math.rs  mime.rs  (+19 more)
crates/windjammer-ui/: Cargo.toml  README.md  serve_demo.wj
examples/wasm_game/: Cargo.toml  README.md  index.html  main.wj
sdks/cpp/: CMakeLists.txt  README.md
sdks/python/: README.md  pyproject.toml  setup.py
sdks/rust/: Cargo.toml  README.md
tools/sdk-generator/: Cargo.toml
(+4090 files in other folders)
