[package]
name = "windjammer"
version = "0.46.0"
edition = "2021"

# Prevent this from being treated as part of parent workspace
[workspace]

[workspace.package]
version = "0.46.0"
edition = "2021"
authors = ["Jeffrey Friedman"]
license = "MIT"

[dependencies]
# Core compiler dependencies (always available, WASM-compatible)
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
typed-arena = "2.0"
colored = "2.0"
chrono = "0.4"
once_cell = "1.19"
smallvec = "1.13"

# CLI/terminal functionality (not needed for WASM)
tempfile = { version = "3.10", optional = true }
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.28", optional = true }
syntect = { version = "5.2", optional = true }
salsa = { version = "0.24", optional = true }
env_logger = { version = "0.11", optional = true }

# Native runtime dependencies (not used by compiler core, only in codegen templates)
image = { version = "0.24", optional = true }
pollster = { version = "0.3", optional = true }
rapier3d = { version = "0.17", optional = true }
rolt = { version = "0.3.1", optional = true }
wgpu = { version = "0.19", optional = true }
winit = { version = "0.29", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
windjammer-runtime = { version = "0.46.0", path = "crates/windjammer-runtime", optional = true }

[features]
default = ["cli", "native-runtime"]
# CLI binary with full terminal UI, syntax highlighting, incremental compilation
cli = ["dep:crossterm", "dep:ratatui", "dep:syntect", "dep:tempfile", "dep:salsa", "dep:env_logger", "highlighting"]
# Syntax highlighting in error messages
highlighting = ["dep:syntect"]
# Native runtime deps (only needed for codegen templates that reference these crates)
native-runtime = ["dep:image", "dep:pollster", "dep:rapier3d", "dep:rolt", "dep:wgpu", "dep:winit", "dep:bytemuck", "dep:windjammer-runtime"]

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
criterion = "0.5"

[[bin]]
name = "wj-build-helper"
path = "build.rs"

# wj binary requires cli feature - excluded from default build so tests can run
[[bin]]
name = "wj"
path = "src/bin/wj.rs"
required-features = ["cli"]

# wj-lint: Minimal Rust leakage linter (no cli deps) - for CI
[[bin]]
name = "wj-lint"
path = "src/bin/wj-lint.rs"

# main.rs binary (windjammer) - incomplete, excluded from default build
[[bin]]
name = "windjammer"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "string_optimization_bench"
harness = false

[profile.release]
opt-level = 3
