[workspace]
members = [
    ".",
    "crates/windjammer-lsp",
    "crates/windjammer-mcp",
    "crates/windjammer-runtime",
]

[workspace.package]
version = "0.48.0"
edition = "2021"
authors = ["Jeffrey Friedman <20387583+jeffreyfriedman@users.noreply.github.com>", "Windjammer Contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.90"

[package]
name = "windjammer"
version.workspace = true
edition.workspace = true
default-run = "wj"
authors.workspace = true
license.workspace = true
description = "A simple language inspired by Go, Ruby, and Elixir that transpiles to Rust - 80% of Rust's power with 20% of the complexity"
repository = "https://github.com/jeffreyfriedman/windjammer"
homepage = "https://github.com/jeffreyfriedman/windjammer"
documentation = "https://github.com/jeffreyfriedman/windjammer/blob/main/docs/GUIDE.md"
keywords = ["compiler", "transpiler", "rust", "go", "language"]
categories = ["development-tools", "compilers"]
readme = "README.md"
rust-version.workspace = true
autobins = false
autotests = false
exclude = [
    "test_output_*",
    "examples/*/build_output",
    "examples/*/pkg",
    "examples/*/target",
    "examples/taskflow/rust",
    "examples/taskflow/windjammer",
    ".github",
    "docs/*.md"
]

[lib]
name = "windjammer"
path = "src/lib.rs"

[[bin]]
name = "wj"
path = "src/bin/wj.rs"
required-features = ["cli"]

[[bin]]
name = "wj-lint"
path = "src/bin/wj-lint.rs"

[[bin]]
name = "windjammer"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:crossterm", "dep:ratatui", "dep:syntect", "dep:tempfile", "dep:salsa", "dep:env_logger", "highlighting"]
highlighting = ["dep:syntect"]
# Opt-in test suite targets: `cargo test --features parser_tests`, etc.
# With no *_tests feature enabled, `cargo test` runs the full suite.
parser_tests = []
analyzer_tests = []
codegen_tests = []
interpreter_tests = []
conformance_tests = []
integration_tests = []
# Skip slow fixture integration tests (cargo test subprocesses).
# Use for fast iteration: cargo test --release --test all --features skip_fixtures
skip_fixtures = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
typed-arena = "2.0"
colored = "2.0"
chrono = "0.4"
once_cell = "1.19"
rayon = "1.10"
smallvec = "1.13"

tempfile = { version = "3.10", optional = true }
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.28", optional = true }
syntect = { version = "5.2", optional = true }
salsa = { version = "0.24", optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
criterion = "0.5"
serde_json = "1.0"

[[test]]
name = "all"
path = "tests/all.rs"

[[bench]]
name = "string_optimization_bench"
harness = false

[[bench]]
name = "simd_vectorization_bench"
harness = false

[[bench]]
name = "cache_locality_aosoa_bench"
harness = false

[profile.release]
opt-level = 3
