[package]
name = "windjammer-editor-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Windjammer Team"]
description = "Desktop editor for Windjammer game engine (Tauri-based)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/windjammer-lang/windjammer"

[dependencies]
windjammer = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = [] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

