[package]
name = "windjammer-game-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windjammer-ui = { path = "../windjammer-ui" }

[features]
default = ["desktop"]
desktop = ["windjammer-ui/desktop"]
web = ["windjammer-ui/web"]

[[bin]]
name = "editor_professional"
path = "src/bin/editor_professional.rs"
required-features = ["desktop"]

