[package]
name = "windjammer-game-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windjammer-ui = { path = "../windjammer-ui" }
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true }
rfd = { version = "0.14", optional = true }

[features]
default = ["desktop"]
desktop = ["windjammer-ui/desktop", "dep:egui", "dep:eframe", "dep:rfd"]
web = ["windjammer-ui/web"]

[[bin]]
name = "editor"
path = "src/bin/editor.rs"
required-features = ["desktop"]

