[package]
name = "windjammer-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "windjammer-lsp"
path = "src/main.rs"

[dependencies]
# LSP protocol implementation
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }

# Incremental compilation framework (same as rust-analyzer)
salsa = "0.17"

# Syntax tree (resilient parsing)
rowan = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Path handling
dashmap = "5.5"
lsp-types = "0.95"

# Reference to main windjammer compiler
windjammer = { path = "../.." }

