[package]
name = "windjammer-runtime"
version = "0.35.2"
edition = "2021"
authors = ["Windjammer Contributors"]
description = "Runtime library for Windjammer standard library implementations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeffreyfriedman/windjammer"

[features]
default = []
server = ["axum", "tokio", "tower", "tower-http"]
db = ["sqlx", "tokio"]
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook", "wasm-bindgen-futures"]

[dependencies]
# HTTP Client & Server (axum/tokio are optional)
axum = { version = "0.7", features = ["macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MIME types
mime_guess = "2.0"

# File system (uses std::fs, no extra deps needed)

# Async runtime
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# URL parsing
url = "2.5"

# Additional stdlib modules
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
bcrypt = "0.15"
base64 = "0.21"
hex = "0.4"
urlencoding = "2.1"
dirs = "5.0"
csv = "1.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"], optional = true }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
regex = "1.10"
chrono = "0.4"

# Parallel computation
rayon = "1.8"
wasm-bindgen-futures = { version = "0.4", optional = true }

# Web/WASM support for UI
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "InputEvent",
    "HtmlInputElement",
    "HtmlButtonElement",
    "DomTokenList",  # For classList
    "console",       # For console logging
    "Storage",       # For localStorage
    "Worker",        # For Web Workers
    "MessageEvent",  # For Worker messages
    "Navigator",     # For hardwareConcurrency
    "WebSocket",     # For WebSocket support
    "Request",       # For Fetch API
    "Response",      # For Fetch API
    "RequestInit",   # For Fetch API
    "Headers",       # For Fetch API
], optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
