[package]
name = "windjammer-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cross-platform UI framework for Windjammer (Web, Desktop, Mobile)"
keywords = ["ui", "framework", "cross-platform", "wasm", "tauri"]
categories = ["gui", "web-programming", "wasm"]

[lib]
name = "windjammer_ui"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "serve_wasm"
path = "src/bin/serve_wasm.rs"

[dependencies]
# Core Windjammer dependency
windjammer = { path = "../..", version = "0.34.0" }

# Proc macro for #[component]
windjammer-ui-macro = { path = "../windjammer-ui-macro", version = "0.34.0" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

# Web platform (WASM)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "EventTarget",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "DomTokenList",
    "console",
], optional = true }
js-sys = { version = "0.3", optional = true }

# Desktop platform (winit + wgpu)
winit = { version = "0.30", optional = true }
wgpu = { version = "23.0", optional = true }
pollster = { version = "0.3", optional = true }

# Desktop platform (Tauri - legacy, keeping for compatibility)
tauri = { version = "2.0", features = ["protocol-asset"], optional = true }

# Mobile platform (iOS)
objc = { version = "0.2", optional = true }
cocoa = { version = "0.25", optional = true }

# Mobile platform (Android)
jni = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = "0.4"
console_error_panic_hook = "0.1"
criterion = "0.5"

[[bench]]
name = "signal_benchmarks"
harness = false

[features]
default = ["web"]

# Platform features
web = ["wasm-bindgen", "web-sys", "js-sys"]
desktop = ["winit", "wgpu", "pollster", "tokio"]
desktop-tauri = ["tauri", "tokio"]
mobile-ios = ["objc", "cocoa"]
mobile-android = ["jni"]

# All platforms (for testing)
all-platforms = ["web", "desktop", "mobile-ios", "mobile-android"]

